# VisualTrackingNew

./: .gitignore  CMakeLists.txt  config.txt  experient_init_parameter.md  main_tracking.cpp  test_KCF.cpp  test_KF.cpp  test_config.cpp  test_config.txt  test_timer.cpp  test_utils.cpp  test_utils_opencv.cpp
KCF/: kcftracker.cpp  kcftracker.hpp
KalmanFilter/: KalmanFilter.cpp  KalmanFilter.h
Map/: CMap.cpp  CMap.h
utils/: config.cpp  config.h  timer.h  utils.h
utils_opencv/: utils_opencv.h
